// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`on 1`] = `
{
  "annotation": {},
  "chartType": "line",
  "config": {
    "line": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "crosshairLine": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "lineColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": false,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
      "yAxis": {
        "grid": {
          "gridColor": "#606773",
          "gridWidth": 2,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#606773",
          "labelFontSize": 12,
          "labelFontWeight": 500,
          "visible": true,
        },
        "line": {
          "lineColor": "#606773",
          "lineWidth": 2,
          "visible": true,
        },
        "max": 0,
        "min": 185,
        "nice": true,
        "tick": {
          "tickColor": "#606773",
          "tickInside": true,
          "tickSize": 10,
          "visible": true,
        },
        "title": {
          "titleColor": "#606773",
          "titleFontSize": 12,
          "titleFontWeight": 500,
          "titleText": "指标",
          "visible": true,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "line": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "crosshairLine": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "lineColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-01",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-01",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-01",
      "profit": 10,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-01",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-01",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-01",
      "sales": 20,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-02",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-02",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-02",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-02",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-02",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-02",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-03",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-03",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-03",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-03",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-03",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-03",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-04",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-04",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-04",
      "profit": 50,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-04",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-04",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-04",
      "sales": 100,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-05",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-05",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-05",
      "profit": 40,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-05",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-05",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-05",
      "sales": 80,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-06",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-06",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-06",
      "profit": 10,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-06",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-06",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-06",
      "sales": 20,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-07",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-07",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-07",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-07",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-07",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-07",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-08",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-08",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-08",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-08",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-08",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-08",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-09",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-09",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-09",
      "profit": 50,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-09",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-09",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-09",
      "sales": 100,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-10",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-10",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-10",
      "profit": 40,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-10",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-10",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-10",
      "sales": 80,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-11",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-11",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-11",
      "profit": 10,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-11",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-11",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-11",
      "sales": 20,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-12",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-12",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-12",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-12",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-12",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-12",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-13",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-13",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-13",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-13",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-13",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-13",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-14",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-14",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-14",
      "profit": 50,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-14",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-14",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-14",
      "sales": 100,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-15",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-15",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-15",
      "profit": 40,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-15",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-15",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-15",
      "sales": 80,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-16",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-16",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-16",
      "profit": 10,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-16",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-16",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-16",
      "sales": 20,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-17",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-17",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-17",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-17",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-17",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-17",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-18",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-18",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-18",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-18",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-18",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-18",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-19",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-19",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-19",
      "profit": 50,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-19",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-19",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-19",
      "sales": 100,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-20",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-20",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-20",
      "profit": 40,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-20",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-20",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-20",
      "sales": 80,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-21",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-21",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-21",
      "profit": 10,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-21",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-21",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-21",
      "sales": 20,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-22",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-22",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-22",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-22",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-22",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-22",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-23",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-23",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-23",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-23",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-23",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-23",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-24",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-24",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-24",
      "profit": 50,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-24",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-24",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-24",
      "sales": 100,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-25",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-25",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-25",
      "profit": 40,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-25",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-25",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-25",
      "sales": 80,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-26",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-26",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-26",
      "profit": 10,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-26",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-26",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-26",
      "sales": 20,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-27",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-27",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-27",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-27",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-27",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-27",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-28",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-28",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-28",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-28",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-28",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-28",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-29",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-29",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-29",
      "profit": 50,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-29",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-29",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-29",
      "sales": 100,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-30",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-30",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-30",
      "profit": 40,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-30",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-30",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-30",
      "sales": 80,
    },
    {
      "__Dim_ColorId__": "profit-profit",
      "__Dim_Color__": "profit",
      "__Dim_Detail__": "profit",
      "__Dim_X__": "2019-01-31",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-31",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-31",
      "profit": 10,
    },
    {
      "__Dim_ColorId__": "sales-sales",
      "__Dim_Color__": "sales",
      "__Dim_Detail__": "sales",
      "__Dim_X__": "2019-01-31",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-31",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-31",
      "sales": 20,
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "colorRange": [
          0,
          1,
        ],
        "foldMap": {
          "profit": "profit",
          "sales": "sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          10,
          100,
        ],
        "measureValue": "__MeaValue__",
      },
      "id": "line",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "profit-profit": "profit",
          "sales-sales": "sales",
        },
        "colorItems": [
          "profit-profit",
          "sales-sales",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "date",
      "id": "date",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "__MeaName__",
    ],
    "detail": [
      "__MeaName__",
    ],
    "tooltip": [
      "profit",
      "sales",
    ],
    "x": [
      "date",
    ],
    "y": [
      "profit",
      "sales",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "profit",
      "id": "profit",
    },
    {
      "alias": "sales",
      "id": "sales",
    },
  ],
}
`;

exports[`on 2`] = `
{
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": false,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 4,
        "autoLimit": true,
        "autoRotate": false,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 4,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 2,
          "stroke": "#606773",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 2,
          "stroke": "#606773",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#606773",
          "fontSize": 12,
          "fontWeight": 500,
        },
        "visible": true,
      },
      "max": 0,
      "min": 185,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": true,
        "style": {
          "stroke": "#606773",
        },
        "tickSize": 10,
        "visible": true,
      },
      "title": {
        "style": {
          "fill": "#606773",
          "fontSize": 12,
          "fontWeight": 500,
        },
        "text": "指标",
        "visible": true,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "profit-profit",
      "sales-sales",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 1,
          "opacity": 1,
          "stroke": "#3641594d",
        },
        "type": "line",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "line",
    "values": [
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-01",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-01",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-01",
        "profit": 10,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-01",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-01",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-01",
        "sales": 20,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-02",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-02",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-02",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-02",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-02",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-02",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-03",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-03",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-03",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-03",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-03",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-03",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-04",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-04",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-04",
        "profit": 50,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-04",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-04",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-04",
        "sales": 100,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-05",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-05",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-05",
        "profit": 40,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-05",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-05",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-05",
        "sales": 80,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-06",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-06",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-06",
        "profit": 10,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-06",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-06",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-06",
        "sales": 20,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-07",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-07",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-07",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-07",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-07",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-07",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-08",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-08",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-08",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-08",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-08",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-08",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-09",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-09",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-09",
        "profit": 50,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-09",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-09",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-09",
        "sales": 100,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-10",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-10",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-10",
        "profit": 40,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-10",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-10",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-10",
        "sales": 80,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-11",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-11",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-11",
        "profit": 10,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-11",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-11",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-11",
        "sales": 20,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-12",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-12",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-12",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-12",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-12",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-12",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-13",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-13",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-13",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-13",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-13",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-13",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-14",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-14",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-14",
        "profit": 50,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-14",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-14",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-14",
        "sales": 100,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-15",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-15",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-15",
        "profit": 40,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-15",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-15",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-15",
        "sales": 80,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-16",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-16",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-16",
        "profit": 10,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-16",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-16",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-16",
        "sales": 20,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-17",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-17",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-17",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-17",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-17",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-17",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-18",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-18",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-18",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-18",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-18",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-18",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-19",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-19",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-19",
        "profit": 50,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-19",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-19",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-19",
        "sales": 100,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-20",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-20",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-20",
        "profit": 40,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-20",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-20",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-20",
        "sales": 80,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-21",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-21",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-21",
        "profit": 10,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-21",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-21",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-21",
        "sales": 20,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-22",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-22",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-22",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-22",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-22",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-22",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-23",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-23",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-23",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-23",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-23",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-23",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-24",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-24",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-24",
        "profit": 50,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-24",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-24",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-24",
        "sales": 100,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-25",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-25",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-25",
        "profit": 40,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-25",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-25",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-25",
        "sales": 80,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-26",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-26",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-26",
        "profit": 10,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-26",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-26",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-26",
        "sales": 20,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-27",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-27",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-27",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-27",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-27",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-27",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-28",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-28",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-28",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-28",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-28",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-28",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-29",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-29",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-29",
        "profit": 50,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-29",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-29",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-29",
        "sales": 100,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-30",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-30",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-30",
        "profit": 40,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-30",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-30",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-30",
        "sales": 80,
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "profit",
        "__Dim_X__": "2019-01-31",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-31",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-31",
        "profit": 10,
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "sales",
        "__Dim_X__": "2019-01-31",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-31",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-31",
        "sales": 20,
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "visible": false,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "line": {
    "style": {},
  },
  "padding": 0,
  "point": {
    "state": {
      "dimension_hover": {
        "outerBorder": {
          "distance": 2,
          "lineWidth": 4,
          "strokeOpacity": 0.25,
        },
        "scaleX": 1.4,
        "scaleY": 1.4,
      },
    },
    "style": {},
  },
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "line",
  "xField": "__Dim_X__",
  "yField": "__MeaValue__",
}
`;
